--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -31,18 +31,20 @@ services:
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       # Минимальное количество синхронных реплик для транзакций
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+
+      # TODO: REMOVE LATER
       # Фактор репликации для транзакционных топиков
-      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+      # KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
       # Количество партиций для транзакционных топиков
-      KAFKA_TRANSACTION_STATE_LOG_NUM_PARTITIONS: 1
+      # KAFKA_TRANSACTION_STATE_LOG_NUM_PARTITIONS: 1
       # Фактор репликации по умолчанию для авто-создаваемых топиков
-      KAFKA_DEFAULT_REPLICATION_FACTOR: 1
-      # Задержка перебалансировки consumer-групп (0 = без задержки)
+      # KAFKA_DEFAULT_REPLICATION_FACTOR: 1
+
       KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
       # Автосоздание топиков при первом обращении            
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
       # Количество партиций по умолчанию для новых топиков
-      KAFKA_NUM_PARTITIONS: 3
+      KAFKA_NUM_PARTITIONS: 1
       # Уникальный ID кластера (требуется для KRaft, рандомный)
       CLUSTER_ID: "4L6g3nShT-eMCtK--X86sw"
 
