--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,80 +1,123 @@
 services:
-  # Kafka
-  kafka:
+  kafka1:
     image: confluentinc/cp-kafka:7.6.1
-    container_name: kafka
+    container_name: kafka1
     ports:
-      - "9092:9092"  # Публичный порт для клиентов
-      - "9093:9093"  # Порт для управления кластером
+      - "9092:9092"
+    environment:
+      KAFKA_NODE_ID: 1
+      KAFKA_PROCESS_ROLES: broker,controller
+      KAFKA_LISTENERS: PLAINTEXT://:9092,CONTROLLER://:9093
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka1:9092
+      KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
+      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@kafka1:9093,2@kafka2:9093,3@kafka3:9093
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 3
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 3
+      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
+      KAFKA_NUM_PARTITIONS: 3
+      CLUSTER_ID: "4L6g3nShT-eMCtK--X86sw"
+    volumes:
+      - kafka1_data:/var/lib/kafka
     healthcheck:
       test: ["CMD", "kafka-broker-api-versions", "--bootstrap-server", "localhost:9092"]
       interval: 10s
       timeout: 5s
-      retries: 10
+      retries: 5
       start_period: 30s
+
+  kafka2:
+    image: confluentinc/cp-kafka:7.6.1
+    container_name: kafka2
+    ports:
+      - "9093:9092"
     environment:
-      # Уникальный ID ноды в кластере (в KRaft это обязательно)
-      KAFKA_NODE_ID: 1
-      # Роли: брокер (обработка сообщений) + контроллер (управление метаданными)
+      KAFKA_NODE_ID: 2
       KAFKA_PROCESS_ROLES: broker,controller
-      # Слушатели: клиенты на 9092, контроллер на 9093
       KAFKA_LISTENERS: PLAINTEXT://:9092,CONTROLLER://:9093
-      # Адрес для клиентов (внутри docker-сети)
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
-      # Имя слушателя для controller protocol
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka2:9092
       KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
-      # Протоколы безопасности (здесь без шифрования)
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
-      # Список голосующих контроллеров (для консенсуса в KRaft)
-      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@kafka:9093
-      # Фактор репликации для внутреннего топика офсетов (1 = без репликации)
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-      # Минимальное количество синхронных реплик для транзакций
-      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
-
-      # TODO: REMOVE LATER
-      # Фактор репликации для транзакционных топиков
-      # KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
-      # Количество партиций для транзакционных топиков
-      # KAFKA_TRANSACTION_STATE_LOG_NUM_PARTITIONS: 1
-      # Фактор репликации по умолчанию для авто-создаваемых топиков
-      # KAFKA_DEFAULT_REPLICATION_FACTOR: 1
-
+      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@kafka1:9093,2@kafka2:9093,3@kafka3:9093
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 2
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 2
       KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
-      # Автосоздание топиков при первом обращении            
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
-      # Количество партиций по умолчанию для новых топиков
-      KAFKA_NUM_PARTITIONS: 1
-      # Уникальный ID кластера (требуется для KRaft, рандомный)
+      KAFKA_NUM_PARTITIONS: 3
       CLUSTER_ID: "4L6g3nShT-eMCtK--X86sw"
+    volumes:
+      - kafka2_data:/var/lib/kafka
+    healthcheck:
+      test: ["CMD", "kafka-broker-api-versions", "--bootstrap-server", "localhost:9092"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
 
-  # Kafka-UI
+  kafka3:
+    image: confluentinc/cp-kafka:7.6.1
+    container_name: kafka3
+    ports:
+      - "9094:9092"
+    environment:
+      KAFKA_NODE_ID: 3
+      KAFKA_PROCESS_ROLES: broker,controller
+      KAFKA_LISTENERS: PLAINTEXT://:9092,CONTROLLER://:9093
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka3:9092
+      KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
+      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@kafka1:9093,2@kafka2:9093,3@kafka3:9093
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 2
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 2
+      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
+      KAFKA_NUM_PARTITIONS: 3
+      CLUSTER_ID: "4L6g3nShT-eMCtK--X86sw"
+    volumes:
+      - kafka3_data:/var/lib/kafka
+    healthcheck:
+      test: ["CMD", "kafka-broker-api-versions", "--bootstrap-server", "localhost:9092"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
+
   kafka-ui:
     image: provectuslabs/kafka-ui:latest
     container_name: kafka-ui
     depends_on:
-      kafka:
+      kafka1:
+        condition: service_healthy
+      kafka2:
+        condition: service_healthy
+      kafka3:
         condition: service_healthy
     ports:
       - "8080:8080"
     environment:
       KAFKA_CLUSTERS_0_NAME: local
-      # Сервер Kafka, к которому подключается UI
-      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9092
-
-  # DataCenter metrics generator for dc_metrics topic
-  dc-generator:
-    build: ./dc_generator
-    container_name: dc_generator
-    depends_on:
-      kafka:
-        condition: service_healthy
-    environment:
-      KAFKA_ADDRESS: kafka:9092
-      TOPIC: dc_metrics
-      TIMEOUT: 250
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: "kafka1:9092,kafka2:9092,kafka3:9092"
+      KAFKA_CLUSTERS_0_KAFKACREATESTOPISENABLED: "true"
     restart: always
 
+  dc-generator:
+    build: dc_generator
+    container_name: dc-generator
+    depends_on:
+      kafka1:
+        condition: service_healthy
+      kafka2:
+        condition: service_healthy
+      kafka3:
+        condition: service_healthy
+    environment:
+      KAFKA_ADDRESS: "kafka1:9092,kafka2:9092,kafka3:9092"
+      TOPIC: dc_metrics
+      PARTITIONS: 3
+      REPLICAS: 3
+      TIMEOUT: 500
+    restart: always
 
   jobmanager:
     image: flink:2.1.1
@@ -82,7 +125,11 @@ services:
       - "8081:8081"
     command: jobmanager
     depends_on:
-      kafka:
+      kafka1:
+        condition: service_healthy
+      kafka2:
+        condition: service_healthy
+      kafka3:
         condition: service_healthy
     environment:
       - |
