--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,8 @@
-[submodule "dc_generator"]
-	path = dc_generator
-	url = git@github.com:arsnazarenko/dc_generator.git
-	branch = main
-
 [submodule "streaming_api"]
 	path = streaming_api
-	url = git@github.com:arsnazarenko/streaming_api.git
+	url = ../streaming_api.git
+	branch = main
+[submodule "dc_generator"]
+	path = dc_generator
+	url = ../dc_generator.git
 	branch = main
